0.9.0 (2014-06-16)
------------------

- New application Pond performs local filesystem caching of Enhydris
  data.

- Bitia no longer puts date in output filename, but as a field in the
  file instead; the file is named filename_prefix-XXXX.tif, where XXXX
  is a number from 0 (for most recent) to files_to_produce.

- Bitia now works locally, without communicating with Enhydris; Pond
  must be called before it in order to update the local cache.

- Added version 3 of time series file format.

- New application Fordonia performs time series aggregation.

0.8.1 (2014-06-06)
------------------

- Added bitia to scripts (accidentally forgotten in 0.8.0)

0.8.0 (2014-06-05)
------------------

- Python 3 support

- enhydris_api client module

- New CLI program bitia for spatial integration

- Added loggertodb msaccess file format

- Some bug fixes

0.7.3 (2014-06-03)
------------------

- Fixed setup.py that was requiring pytz to be installed

0.7.2 (2014-04-30)
------------------

- Added method Timeseries.delete_items()

0.7.1 (2014-03-19)
------------------

- Davis WDAT5 loggertodb timezone parameter now works with py2exe on
  Windows

0.7.0 (2014-03-18)
------------------

- Davis WDAT5 loggertodb file format now works

- Time series files can have empty lines

0.6.0 (2014-02-25)
------------------

- Windows installer for loggertodb

0.5.0 (2014-01-28)
------------------

- loggertodb support for Davis WDAT5 files

- loggertodb checks for configuration errors

0.4.1 (2013-11-14)
------------------

- loggertodb compatible with Django 1.5.5 and later.

0.4.0 (2013-10-31)
------------------

- Improve DST handling; use pytz.

0.3.0 (2013-10-14)
------------------

- Strip double quotes in loggertodb's simple data file format.

0.2.1 (2013-08-19)
------------------

- Improvements in installation procedure.

0.1.0 (2013-08-14)
------------------

- Initial release.